--- a/frontend/app/elements/awesome-meme/awesome-meme.html
+++ b/frontend/app/elements/awesome-meme/awesome-meme.html
@@ -2,10 +2,33 @@
 
 <dom-module id="awesome-meme">
   <template>
-  <!-- TODO: Add HTML -->
+    <div class="top">{{ top }}</div>
+    <div class="bottom">{{ bottom }}</div>
 
     <style>
-      /* TODO: Add CSS */
+    :host {
+      display: block;
+      background-image: url("/images/awesome.png");
+      width: 300px;
+      height: 300px;
+      position: relative;
+    };
+
+    .top, .bottom {
+      position: absolute;
+      font-size: 30px;
+      font-weight: bold;
+      width: 100%;
+      text-align: center;
+    }
+
+    .top {
+      top: 20px;
+    }
+
+    .bottom {
+      bottom: 20px;
+    }
     </style>
   </template>
 
