Use created <awesome-meme> element on the app.
Tutorial finished!

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -122,6 +122,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <iron-pages attr-for-selected="data-route" selected="{{route}}">
             <section data-route="home" tabindex="-1">
               <paper-material elevation="1">
+                <p class="paper-font-body2">This is another card.</p>
+                <!-- Added the line below -->
+                <awesome-meme top="ES2015" bottom="is awesome!"></awesome-meme>
+              </paper-material>
+
+              <paper-material elevation="1">
                 <my-greeting></my-greeting>
 
                 <p class="subhead">You now have:</p>
