--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -164,6 +164,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               <paper-material elevation="1">
                 <h1 class="page-title" tabindex="-1">Posts</h1>
                 <p>This is the posts section</p>
+                <yabe-list></yabe-list>
               </paper-material>
             </section>
 
