Add function to create post object with link

--- a/frontend/app/elements/yabe-list/yabe-list.html
+++ b/frontend/app/elements/yabe-list/yabe-list.html
@@ -35,7 +35,18 @@
       attributeChanged() {}
 
       postRetrieved(request) {
-        this.items = request.detail.response.data;
+        this.items = this.refineResponseData(request.detail.response.data);
+      }
+
+      refineResponseData(responseData) {
+        return responseData.map( (post) => {
+          return {
+            id: post.id,
+            title: post.title,
+            content: post.content,
+            link: `${app.baseUrl}posts/${post.id}`
+          }
+        });
       }
     }
 
