Implement <yabe-post> with basic dynamic binding

--- a/frontend/app/elements/elements.html
+++ b/frontend/app/elements/elements.html
@@ -45,3 +45,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <!-- Yabe components -->
 <link rel="import" href="yabe-list/yabe-list.html">
+<link rel="import" href="yabe-post/yabe-post.html">
