--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -170,8 +170,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
             <section data-route="post" tabindex="-1">
               <paper-material elevation="1">
-                <h1 class="page-title" tabindex="-1">Post #{{ params.id }}</h1>
-                <p>This is a post section</p>
+                <h1 class="page-title" tabindex="-1">Post {{ params.postid }}</h1>
+                <yabe-post postid$="{{ params.postid }}"></yabe-post>
               </paper-material>
             </section>
 
