Bind yabe-elixir API (#2)
* Add posts routing

* Add posts and post section

* Remove users/user-info section and its routing

* Add basic <yabe-list> element with API binding

* Add function to create post object with link

* Set title on routing

* Get list after <yabe-list> is initialized

* Use plural

* Implement <yabe-post> with basic dynamic binding

* Clear post when loading

* Remove post id

--- a/frontend/app/elements/routing.html
+++ b/frontend/app/elements/routing.html
@@ -43,27 +43,32 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     page('/', () => {
       app.route = 'home';
+      app.title = "Home";
       setFocus(app.route);
     });
 
     page(app.baseUrl, () => {
       app.route = 'home';
+      app.title = "Home";
       setFocus(app.route);
     });
 
-    page('/users', () => {
-      app.route = 'users';
+    page("/posts", () => {
+      app.route = "posts";
+      app.title = "Posts";
       setFocus(app.route);
     });
 
-    page('/users/:name', (data) => {
-      app.route = 'user-info';
+    page("/posts/:postid", (data) => {
+      app.route = "post";
+      app.title = "Post";
       app.params = data.params;
       setFocus(app.route);
     });
 
     page('/contact', () => {
       app.route = 'contact';
+      app.title = "Contact";
       setFocus(app.route);
     });
 
