--- a/frontend/app/elements/elements.html
+++ b/frontend/app/elements/elements.html
@@ -42,3 +42,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <!-- Awesome Meme -->
 <link rel="import" href="awesome-meme/awesome-meme.html">
+
+<!-- Yabe components -->
+<link rel="import" href="yabe-list/yabe-list.html">
+<link rel="import" href="yabe-post/yabe-post.html">
